intergoup meeting link, about section on home page

--- a/_src/index.njk
+++ b/_src/index.njk
@@ -16,6 +16,21 @@ bodyClass: home
   </div>
 </div>
 <div class="container bg-white shadow-sm p-4 p-sm-5">
+  <div id="about" class="mb-5">
+        <h2>About Sexaholics Anonymous</h2>
+        <h3 class="h6">The SA Purpose</h3>
+        <p>Sexaholics Anonymous (<a href="https://www.sa.org">sa.org</a>) is a fellowship of men and women who share their experience, strength, and hope with each other that they may solve their common problem and help others to recover. The only requirement for membership is a desire to stop lusting and become sexually sober. There are no dues or fees for SA membership; we are self-supporting through our own contributions. SA is not allied with any sect, denomination, politics, organization, or institution; does not wish to engage in any controversy; neither endorses nor opposes any causes. Our primary purpose is to stay sexually sober and help others to achieve sexual sobriety.</p>
+        <h3 class="h6">What is a sexaholic and what is sexual sobriety?</h3>
+        <p>We can only speak for ourselves. The specialized nature of Sexaholics Anonymous can best be understood in terms of what we call the sexaholic. The sexaholic has taken himself or herself out of the whole context of what is right or wrong. He or she has lost control, no longer has the power of choice, and is not free to stop. Lust has become an addiction. Our situation is like that of the alcoholic who can no longer tolerate alcohol and must stop drinking altogether but is hooked and cannot stop. So it is with the sexaholic, or sex drunk, who can no longer tolerate lust but cannot stop.</p>
+        <p>Thus, for the sexaholic, any form of sex with one’s self or with partners other than the spouse is progressively addictive and destructive. We also see that lust is the driving force behind our sexual acting out, and true sobriety includes progressive victory over lust. These conclusions were forced upon us in the crucible of our experiences and recovery; we have no other options. But we have found that acceptance of these facts is the key to a happy and joyous freedom we could otherwise never know.</p>
+        <p>This will and should discourage many inquirers who admit to sexual obsession or compulsion but who simply want to control and enjoy it, much as the alcoholic would like to control and enjoy drinking. Until we had been driven to the point of despair, until we really wanted to stop but could not, we did not give ourselves to this program of recovery. Sexaholics Anonymous is for those who know they have no other option but to stop, and their own enlightened self-interest must tell them this.</>
+        <p>
+          <small class="text-muted">
+            © 1989, 2001 SA Literature.<br>
+            Reprinted with permission of SA Literature.
+          </small>
+        </p>
+      </div>
   <div class="row mb-4">
     <div class="col-12">
       <div class="alert alert-info text-center" style="font-size:1.25rem;">
@@ -24,6 +39,7 @@ bodyClass: home
       </div>
     </div>
   </div>
+
   <h3>Events</h3>
   <br>
   <div class="row">
