--- a/_src/_includes/meetings.njk
+++ b/_src/_includes/meetings.njk
@@ -44,7 +44,7 @@ layout: page
           </td>
           <td class="meetings-contact">
             {% if meeting.contact2_position %}<h6>{{ meeting.contact2_position }}</h6>{% endif %}
-            {% if meeting.contact2_name %}{{ meeting.contact2_name }}{% endif %}
+            {% if meeting.contact2_name %}{{ meeting.contact2_name }} <br>{% endif %}
             {% if meeting.contact2_phone %}<a href="tel:{{ meeting.contact2_phone }}" class="text-nowrap">{{ meeting.contact2_phone }}</a><br>{% endif %}
             {% if meeting.contact2_email %}<a href="mailto:{{ meeting.contact2_email }}" class="text-nowrap">{{ meeting.contact2_email }}</a><br>{% endif %}
             {% if meeting.contact2_instructions %}<span class="font-weight-light">{{ meeting.contact2_instructions }}</span></a><br>{% endif %}
